<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:orientation="vertical"

    android:gravity="center"

    tools:context=".Home">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/plant_img"
        android:layout_gravity="center_horizontal">
    </ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/welcome"
        android:textSize="37sp"
        android:textAlignment="center"
        android:textColor="@color/green_button_background"
        android:layout_marginBottom="20dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        android:background="@drawable/loginbg">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/green_theme_background"
                android:textSize="35sp"
                android:textStyle="bold" />



            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_description2"
                android:textColor="@color/green_button_background"
                android:textSize="25sp" />



            <Button
                android:id="@+id/home_loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/green_theme_background"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/home_registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/green_theme_background"
                android:text="@string/register"
                android:textSize="18sp"
                app:cornerRadius="20dp" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>