<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/plant_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="96dp"
            app:contentDescription="@string/app_description"
            android:contentDescription="@string/app_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="@color/green_theme_background"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"

            android:gravity="center"
            android:text="@string/app_description"
            android:textColor="@color/green_accent"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/start_button"
                android:layout_weight="1"
                android:textSize="19sp" />

            <Button
                android:id="@+id/liveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/live_status"
                android:textSize="19sp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>