<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiveStatus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/current_status"
            android:textColor="@color/green_accent"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cropNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/green_accent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/current_temp"
                android:textColor="@color/green_accent"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tempTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/current_ph"
                android:layout_weight="1"
                android:textColor="@color/green_accent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Current Humidity"
                android:textColor="@color/green_accent"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rhTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/nutrient_content"
                android:textColor="@color/green_accent"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nutrientTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/water_level"
                android:textColor="@color/green_accent"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/waterLevelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/live_status_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/back"
            android:textSize="19sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>